--- a/links.html
+++ b/links.html
@@ -370,10 +370,8 @@ position: relative;
 <sub><img src="https://i.imgur.com/z7SrWRK.gif"></sub> active accs :<br></font>
 <br>
 <font color="#7a6b6b">tmblr </font><a id="actv" title="main blog" href="https://pufti.my.to" target="_blank" >♡</a> <a id="actv" title="pixel blog" href="https://pofti.my.to" target="_blank" >♡</a><br>
-<font color="#7a6b6b">tt </font><a id="actv" title="aes acc" href="https://twitter.com/sofffti" target="_blank" >♡</a><br>
-<font color="#7a6b6b">ig </font><a id="actv" title="self care acc" href="https://www.instagram.com/soffftie" target="_blank" >♡</a><br>
-<font color="#7a6b6b">yt </font><a id="actv" title="main ch" href="https://www.youtube.com/batatinhamiddlepot" target="_blank" >♡</a><br>
-<font color="#7a6b6b">ywot </font><a id="actv" title="world" href="https://www.yourworldoftext.com/~mimipot/comfymilk" target="_blank" >♡</a><br>
+<font color="#7a6b6b">tt </font><a id="actv" title="aes acc" href="https://twitter.com/sofffti" target="_blank" >♡</a>　<font color="#7a6b6b">ig </font><a id="actv" title="self care acc" href="https://www.instagram.com/soffftie" target="_blank" >♡</a><br>
+<font color="#7a6b6b">yt </font><a id="actv" title="main ch" href="https://www.youtube.com/batatinhamiddlepot" target="_blank" >♡</a>　<font color="#7a6b6b">ywot </font><a id="actv" title="world" href="https://www.yourworldoftext.com/~mimipot/comfymilk" target="_blank" >♡</a><br>
 </div>
 <br>
 <br><br><br><br><br><br><br><br><br>
@@ -381,7 +379,7 @@ position: relative;
 i do have some secret accounts that i use for backup or personal stuff. on social media accs, i don't use the middlepot name, so if you see any account with my name out there that is not on that list, <b>it's not mine</b>.<br>
 if you have any questions about an account, please don't hesitate to contact me !<br><br></font>
 <sub><img src="https://i.imgur.com/aUS9leF.gif"></sub><font color="#948181"><i> letters@middlepot.com</i></font></font></center>
-<br><br><br><br>
+<br><br><br>
 
 <sub><img src="https://i.imgur.com/lT3wh5L.gif"></sub><font color="#a5afb7"> friends only acc :</font><br>
 <br>
