--- a/tiny-journal.html
+++ b/tiny-journal.html
@@ -361,6 +361,53 @@ enjooooy ~<br>
 <br><br><br>
 
 <div style="text-align:left">
+<center><font color="#B5A3A3">
+<img src="https://i.imgur.com/QLXV4LE.gif"><br><br>
+february . 10 . 2019<br>
+☆ guardian angel ☆
+</font>
+</center>
+<font color="#C2B1B1">
+<br><br>
+
+　do you want to be a guardian angel ?<br>
+　　　　　　　　　　　　　　　　the kindest of all ..<br>
+　　　　　　　　　　　a fairy godmother ,<br>
+　　　　　　　　　　　　　　making wishes come true .<br>
+　follow these steps :<br>
+<br>
+　　ణ　always be there , for those you've choose .<br>
+　　　　　even knowing they will never see you ;<br>
+　　　　　　　　　　　　　　　　　they can't hear you .<br>
+　　　you can leave , when they no longer need you .<br>
+<br>
+　　ణ　listen to them , keep them safe and comfortable .<br>
+　　　　　　　　　　　　you can call them friends or family ,<br>
+　　　　　　but they will not be able to feel the same ;<br>
+　　　　　　　　　　　　　maybe will not even thank you .<br>
+<br>
+　　ణ　keep yourself the purest . accept who you are .<br>
+　　　you can't fly , your wings are for protection .<br>
+　　　　　　　　you halo is invisible , even for yourself .<br>
+　　　　　　　you shouldn't expect too much from others .<br>
+　　　　　　you can't get close to those you've choose ;<br>
+　　　you can probably get close to those who chose you .<br>
+<br>
+　　ణ　don't forget they can disappoint you ,<br>
+　　　　　　　　　　　　　　they can reject you .<br>
+　　　　　　　　　　　　　　　you can't always help ,<br>
+　　　　　　　　　　　you can't help everyone ,<br>
+　　　　　　　but you will know when you have to try ;<br>
+　　　　　　and it will fill your heart with love .
+<br><br>
+</font>
+
+
+<br><br><br>
+<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
+<br><br><br>
+
+<div style="text-align:left">
 <center><font color="#CFA5A5">
 <img src="https://i.imgur.com/1p8cFQf.gif"><br><br>
 november . 29 . 2018<br>
@@ -460,34 +507,6 @@ june . 27 . 2018<br>
 　　　　　　　　　and my heart beats faster<br>
 　　life is worth it.
 <br><br>
-</font>
-
-
-<br><br><br>
-<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
-<br><br><br>
-
-
-<div style="text-align:left">
-<center><font color="#CFA5A5">
-<img src="https://i.imgur.com/1p8cFQf.gif"><br><br>
-june . 03 . 2018<br>
-☆ the probably blind little girl ☆
-</font>
-</center>
-<font color="#D8ACAC">
-<br><br>
-
-　　Once upon a time there was this girl, just like any girl we don't know, or we don't know if they really exist. It is not known until today how or if she really went blind, but let's just proceed.<br>
-　　One easter morning she had not yet got out of bed, or at least opened the eyes, so the easter buny came and called her to eat some chocolate, just to relax, because on that day there was a beautiful easter morning, despite to be christmas.<br>
-　　Then she awoke, still a little sleepy, continued with her eyes closed. The buny said:<br>
-　　— Hey, little girl, open your eyes! Don't you see that today is a special day?<br>
-　　Then slowly she opened her eyes, that were still closed, when she saw the buny and realized that she was blind, although her eyes remained closed, she realized that she saw nothing.<br>
-　　The buny was sad, but it was not because of this. He was not very happy with his new job, he used to be a goblin who helped little girls get out of bed and realize they were not blind, just kept their eyes closed.<br>
-　　This story may or may not make some sense, in fact, everything was confused because the little christmas bunny thought it was easter. The girl couldn't see because her eyes were closed, maybe she was even afraid of the bunny because he wasn't the easter bunny.<br>
-　　Moral of the story: To every five people, the double is ten. In addition, buny is not supposed to be bunny, it's the name of the bunny, but it's not written as a name, because it's a bunny name.
-<br><br>
-<center>E N D</center>
 </font>
 
 
