--- a/index.html
+++ b/index.html
@@ -344,6 +344,7 @@ position: relative;
 <br><br><center><div id="update" style="background-image:url(https://i.imgur.com/HgFke6Y.png); border: 1px; padding: 10px; overflow: auto; color: #BC9F9F; width: 172px;height: 100px; text-align: justify; font-family: Verdana; font-size:7px; line-height: 100%">
 <center><img src="https://i.imgur.com/bwAaPW7.gif"></center>
 <br><br>
+　02/10 <img src="https://i.imgur.com/y9S1bJ8.gif"> text on: <font color="#DFB7B7">tiny journal</font><br>
 　02/10 <img src="https://i.imgur.com/y9S1bJ8.gif"> tips on: <font color="#DFB7B7">help page</font><br>
 　02/08 <img src="https://i.imgur.com/y9S1bJ8.gif"> post on: <font color="#DFB7B7">news blog</font><br>
 　02/08 <img src="https://i.imgur.com/y9S1bJ8.gif"> stuff on: <font color="#DFB7B7">portfolio</font><br>
@@ -351,7 +352,6 @@ position: relative;
 　02/07 <img src="https://i.imgur.com/y9S1bJ8.gif"> stuff on: <font color="#DFB7B7">gaming page</font><br>
 　02/02 <img src="https://i.imgur.com/y9S1bJ8.gif"> tips on: <font color="#DFB7B7">help page</font><br>
 　01/30 <img src="https://i.imgur.com/y9S1bJ8.gif"> edit on: <font color="#DFB7B7">faq</font><br>
-　01/30 <img src="https://i.imgur.com/y9S1bJ8.gif"> links on: <font color="#DFB7B7">links page</font><br>
 </div></center>
 
 <br>
