--- a/status.html
+++ b/status.html
@@ -367,6 +367,9 @@ position: relative;
 <div style="padding-left: 163px; padding-top: 130px;">
 <div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 270px; height: 120px; overflow-x: hidden; z-index: 30; text-align:justify; line-height: 100%">
 
+　<sub><img src="https://i.imgur.com/9LP84Nr.gif"></sub> <font color="#b7cccc" style="border-bottom:1px dashed #d8c0ad;"><sup>02.14.19</sup></font> <font color="#9cb7b7">→</font>　♡ ♡ hug me ♡ ♡
+
+<br><br><br>
 　<sub><img src="https://i.imgur.com/YQRQHJd.gif"></sub> <font color="#f2c6c6" style="border-bottom:1px dashed #d8c0ad;"><sup>02.08.19</sup></font> <font color="#d8abab">→</font>　light hearted , softer.
 
 <br><br><br>
@@ -392,9 +395,6 @@ position: relative;
 
 <br><br><br>
 　<sub><img src="https://i.imgur.com/UvUc3xP.gif"></sub> <font color="#c9d5e5" style="border-bottom:1px dashed #d8c0ad;"><sup>10.11.18</sup></font> <font color="#a0acbc">→</font>　i want to be tiny & sleep in your<br>　　　　　　　　　pocket
-
-<br><br><br>
-　<sub><img src="https://i.imgur.com/9LP84Nr.gif"></sub> <font color="#b7cccc" style="border-bottom:1px dashed #d8c0ad;"><sup>10.03.18</sup></font> <font color="#9cb7b7">→</font>　i'm doing my best !!!
 
 
 </div>
