--- a/links.html
+++ b/links.html
@@ -366,12 +366,11 @@ position: relative;
 </div>
 
 <div style="position:relative; float:left;">
-<font color="#dc9a9a9">
+<font color="#dc9a9a9"><br>
 <sub><img src="https://i.imgur.com/z7SrWRK.gif"></sub> active accs :<br></font>
 <br>
 <font color="#7a6b6b">tmblr </font><a id="actv" title="main blog" href="https://pufti.my.to" target="_blank" >♡</a> <a id="actv" title="pixel blog" href="https://pofti.my.to" target="_blank" >♡</a><br>
-<font color="#7a6b6b">tt </font><a id="actv" title="aes acc" href="https://twitter.com/sofffti" target="_blank" >♡</a>　<font color="#7a6b6b">ig </font><a id="actv" title="self care acc" href="https://www.instagram.com/soffftie" target="_blank" >♡</a><br>
-<font color="#7a6b6b">yt </font><a id="actv" title="main ch" href="https://www.youtube.com/batatinhamiddlepot" target="_blank" >♡</a>　<font color="#7a6b6b">ywot </font><a id="actv" title="world" href="https://www.yourworldoftext.com/~mimipot/comfymilk" target="_blank" >♡</a><br>
+<font color="#7a6b6b">tt </font><a id="actv" title="comfy acc" href="https://twitter.com/sofffti" target="_blank" >♡</a>　<font color="#7a6b6b">ig </font><a id="actv" title="self care acc" href="https://www.instagram.com/soffftie" target="_blank" >♡</a>　<font color="#7a6b6b">yt </font><a id="actv" title="main ch" href="https://www.youtube.com/batatinhamiddlepot" target="_blank" >♡</a><br>
 </div>
 <br>
 <br><br><br><br><br><br><br><br><br>
