--- a/credits.html
+++ b/credits.html
@@ -485,15 +485,15 @@ moveupvar=setTimeout("moveup()",20)
 <font family = "Verdana"><font color="#AD9F97"><font size="2">hosting sites that i currently use :</font></font></font><br><br>
 <font family = "Verdana"><font color="#BAA99F"><font size="1">
 　　　server : github<br>
+　　　html : github<br>
+　　　image : imgur / catbox.moe<br>
 　　　mp3 : catbox.moe<br>
 　　　webm : catbox.moe<br>
-　　　image : imgur<br>
-　　　folder : google photos<br>
 　　　font : catbox.moe<br>
-　　　txt : google drive<br>
-　　　html : github<br>
-　　　script : google drive<br>
+　　　txt : catbox.moe<br>
 　　　swf : catbox.moe<br>
+　　　folder : google drive<br>
+　　　script : google drive<br>
 　　　rar : mega<br><br>
 </font></font></font>
 <font family = "Verdana"><font color="#B3A49A"><font size="1"><i>
