--- a/about.html
+++ b/about.html
@@ -329,19 +329,18 @@ position: relative;
 </div>
 
 <div id="menu2">
-<center>
-<img src="https://i.imgur.com/PTzpVdh.png"/><a href="https://middlepot.com/aesthetics"><img src="https://i.imgur.com/zvZ8Wx2.png"/></a><a href="https://middlepot.com/languages"><img src="https://i.imgur.com/rP5u6jK.png"/></a><img src="https://i.imgur.com/W6coopC.png"/></center>
 
-</center>
+<img src="https://i.imgur.com/PTzpVdh.png"/><a href="https://middlepot.com/status"><img src="https://i.imgur.com/gtWd2tI.png"/></a><a href="https://middlepot.com/look-book"><img src="https://i.imgur.com/21R6rOA.png"/></a><a href="https://middlepot.com/portfolio"><img src="https://i.imgur.com/5UlJkeC.png"/><a href=""></a><a href="https://middlepot.com/help"><img src="https://i.imgur.com/f6GSYqr.png"/></a><a href="https://middlepot.com/gaming"><img src="https://i.imgur.com/5dSoAlZ.png"/></a><a href="https://middlepot.com/cemetery"><img src="https://i.imgur.com/FctiXzO.png"/></a><a href="https://middlepot.com/recommended"><img src="https://i.imgur.com/myWm2B5.png"/></a><img src="https://i.imgur.com/W6coopC.png"/>
+
 
 </div>
 
 <div id="stuff">
 <br><br>
-<div style="position:absolute; left:20%; right:20%;"><center>
+<div style="position:absolute; left:18%; right:18%;"><center>
 <img src="https://i.imgur.com/71Lplc0.gif"/>
 <br><br><br>
-<font color="#d6b3b3"><a data-target="spoiler1" class="btn-spoiler">melissa</a></font><font color="#8e7d7d"> ・ </font><font color="#bca6a0"><a title="august . 11 . 1997">21</a></font><font color="#8e7d7d"> ・ </font><font color="#d6b3b3">she / her</font><font color="#8e7d7d">  ・ </font><font color="#bca6a0">são paulo</font></center>
+<font color="#d6b3b3"><a title="click here to see me !" data-target="spoiler1" class="btn-spoiler">i'm melissa</a></font><font color="#8e7d7d"> ・ </font><font color="#bca6a0"><a title="august . 11 . 1997">i'm 21</a></font><font color="#8e7d7d"> ・ </font><font color="#d6b3b3"><a title="a bunny girl ..">i'm a girl</a></font><font color="#8e7d7d">  ・ </font><font color="#bca6a0"><a title="i'm going to move soon, tho">i live in são paulo</a></font></center>
 <br>
 
 <center>
@@ -372,11 +371,11 @@ p { margin: 0; }
     loop($btns, function($btn){
         $btn.addEventListener("click", function(){
             var $spoiler = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "melissa" ){
-                this.innerHTML = "melissa ˣ";
+            if( this.innerHTML === "i'm melissa" ){
+                this.innerHTML = "i'm melissa ˣ";
                 $spoiler.classList.remove("is-closed");
             } else {
-                this.innerHTML = "melissa";
+                this.innerHTML = "i'm melissa";
                 $spoiler.classList.add("is-closed");
             }
         });
@@ -390,16 +389,16 @@ p { margin: 0; }
 </center>
 
 <br>
-<center><font color="#efcfc6">♡ </font><font color="#8e7d7d">(﻿</font><font color="#efcfc6">〃</font>﻿<font color="#8e7d7d">´ ˘ `﻿</font><font color="#efcfc6">〃﻿ </font><font color="#a59490">my bf , fairies , softness , vanilla milk</font><br>
+<center><font color="#efcfc6">♡ </font><font color="#8e7d7d">(﻿</font><font color="#efcfc6">〃</font>﻿<font color="#8e7d7d">´ ˘ `﻿</font><font color="#efcfc6">〃﻿ </font><font color="#a59490">bubu , fairies , softness , vanilla milk</font><br>
 <font color="#bca9a4">﻿﻿!! </font><font color="#8e7d7d">(﻿</font><font color="#efcfc6">〃﻿﻿</font><font color="#8e7d7d">`^´﻿</font><font color="#efcfc6">〃﻿ </font><font color="#bca9a4">loud noises , mean people</font><br></center>
-<br><br>
 <br>
+<br><br>
 <font color="#ceaaa9">my goal is to live a beautiful life + spread happiness & comfort ഒ</font><br>
 <font color="#a08e8d">i have lots of hobbies, i don't do things perfectly but i work hard to improve on them. you're always welcome to give your opinion, after all i post things here to receive feedback !<br>
-i'm graduated in game development and i like to study languages, mythology, css and other things.</font><br>
+i'm graduated in game design and i like to study languages, mythology, css and other things.</font>
 <br><br><br>
-<font color="#827272">if you want more info about me and my stuff, i suggest you check out the </font><a style="color:#baa8a7;" href="https://middlepot.com/faq">faq</a>
-<br><br><br>
+<font color="#827272">if you want more info about me and my stuff, please check out the </font><a style="color:#baa8a7;" href="https://middlepot.com/faq">faq</a>
+<br><br><br><br>
 <center><img width="300px" height="auto" src="https://i.imgur.com/eMHGeUJ.png"/></center>
 <br><br>
 </div>
