--- a/links.html
+++ b/links.html
@@ -336,8 +336,8 @@ position: relative;
 </div>
 
 <div id="stuff">
-<div style="position:absolute; left:25%; right:25%;">
-<br><br><br><br>
+<div style="position:absolute; left:25%; right:20%;">
+<br><br><br><br><br><br><br>
 <style>
 #ooo { color: #9b8b8b; }
 #actv { color: #d1abab; }
@@ -364,25 +364,28 @@ position: relative;
 <a id="ooo" title="offline ywot" href="https://rosy.latteart.fi" target="_blank" >rosy.latteart.fi</a>
 </div>
 </div>
+<div style="position:relative; float:right; right:7%;">
+<sub><sub><img src="https://i.imgur.com/lT3wh5L.gif"></sub></sub><font color="#a5afb7"> for friends :</font><br>
+<br>
+<font color="#7a6b6b">dscrd </font><a id="inactv" title="add server" href="https://discord.gg/Wq5NhFm" target="_blank" >ഒ</a><br>
+</div>
 
 <div style="position:relative; float:left;">
-<font color="#dc9a9a9"><br>
+<font color="#dc9a9a9">
 <sub><img src="https://i.imgur.com/z7SrWRK.gif"></sub> active accs :<br></font>
 <br>
 <font color="#7a6b6b">tmblr </font><a id="actv" title="main blog" href="https://pufti.my.to" target="_blank" >♡</a> <a id="actv" title="pixel blog" href="https://pofti.my.to" target="_blank" >♡</a><br>
 <font color="#7a6b6b">tt </font><a id="actv" title="comfy acc" href="https://twitter.com/sofffti" target="_blank" >♡</a>　<font color="#7a6b6b">ig </font><a id="actv" title="self care acc" href="https://www.instagram.com/soffftie" target="_blank" >♡</a>　<font color="#7a6b6b">yt </font><a id="actv" title="main ch" href="https://www.youtube.com/batatinhamiddlepot" target="_blank" >♡</a><br>
-</div>
 <br>
-<br><br><br><br><br><br><br><br><br>
-<center><font color="#a59490">
+</div>
+<br><br><br><br><br><br><br><br>
+</div>
+<div style="position:absolute; left:25%; right:25%; top:45%;">
+<font color="#a59490">
+<center><b>important :</b><br><br>
 i do have some secret accounts that i use for backup or personal stuff. on social media accs, i don't use the middlepot name, so if you see any account with my name out there that is not on that list, <b>it's not mine</b>.<br>
 if you have any questions about an account, please don't hesitate to contact me !<br><br></font>
 <sub><img src="https://i.imgur.com/aUS9leF.gif"></sub><font color="#948181"><i> letters@middlepot.com</i></font></font></center>
-<br><br><br>
-
-<sub><img src="https://i.imgur.com/lT3wh5L.gif"></sub><font color="#a5afb7"> friends only acc :</font><br>
-<br>
-<font color="#7a6b6b">dscrd </font><a id="inactv" title="add server" href="https://discord.gg/Wq5NhFm" target="_blank" >ഒ</a><br>
 <br><br><br>
 
 </div>
