--- a/bearcare.html
+++ b/bearcare.html
@@ -25,18 +25,19 @@
 
 -->
 
-<title>middlepot ഒ</title>
+<title>ഒ</title>
 
-<link rel="shortcut icon" href="https://i.imgur.com/C7cSCvF.gif">
+<link rel="shortcut icon" href="https://i.imgur.com/c2cyx81.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta name="description" content="・゜ ♡   。・　゜ ♡   。・゜ ♡   ゜・。。 ♡　。・゜ ♡ ・  。・゜ ♡   ・゜ ♡ ゜・。 ・ ♡ °  . 。 ♡  .">
 <style>
 body{ 
-  cursor: url(https://i.imgur.com/xrySzI4.png), progress;}
-a:hover {cursor: url(https://i.imgur.com/LY1tJ6u.png), progress;
+  cursor: url(https://i.imgur.com/C9RGjYt.png), progress;}
+a:hover {cursor: url(https://i.imgur.com/EZZ5Vol.png), progress;
   
   }
- ::selection {text-shadow: 0 0 2px #ddd3ce;color:#afa7a3}
- ::-moz-selection {text-shadow: 0 0 2px #ddd3ce;color:#afa7a3}
+ ::selection {text-shadow: 0 0 2px #cec1bb;color:#cec1bb}
+ ::-moz-selection {text-shadow: 0 0 2px #cec1bb;color:#cec1bb}
 }
 }
 </style>
@@ -49,14 +50,13 @@ height: 4px;
 background: #FFF9F9;
 }
 ::-webkit-scrollbar-thumb {
-background-color: #FCE4E4;
+background-color: #f9f0ed;
 -webkit-border-radius: 0ex;
-border: 1px solid #C1A3A3;
+border: 1px dotted #e2d5d0;
 }
-#linkbjinho { color: #ffacac; border-bottom:1px solid #897B7B; }
-#linkkkkkkkk { color: #ffacac; }
-#linkzinho { color: #938373; text-decoration: none;}
-#linkzinhoo { color: #6E6156; text-decoration: none;}
+#linkbjinho { color: #bca7a7; padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
+#linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
+
 </style>
 
 <!--
@@ -101,8 +101,8 @@ max-width:300px; /*how big the tooltip can be at most*/
 border-radius: 0px; /*change your border radius*/
 padding:3px 4px 5px 4px; /*padding inside tooltip*/
 margin:10px 7px -2px 10px; /*distance from word*/
-background-color:#FFF5F5; /*background color*/ 
-  border:1px dashed #CEB6B6; /*border info*/
+background-color:#fcf6f2; /*background color*/ 
+  border:1px dotted #CEB6B6; /*border info*/
   font-family:tahoma; /*tooltip font*/
 font-size:7px; /*tooltip font size*/
 letter-spacing:2px; /*tooltip letter spacing*/
@@ -129,11 +129,11 @@ menuuuuuuuuuuuuuuu
 			}
 			
 			#context_menu {
-				background: #fff9f9;
-				-moz-border-radius: 2px 2px;
-				border: 1px solid #baada3;
+				background: #fcf6f2;
+				-moz-border-radius: 1px 1px;
+				border: 1px dotted #baada3;
 				letter-spacing:1px; 
-				width: 85px;
+				width: 70px;
 				font-size: 8px;
 				position: absolute;
 				display: none;
@@ -141,13 +141,13 @@ menuuuuuuuuuuuuuuu
 			}
 			
 			#context_menu ul li {
-				padding: 4px 3px;
+				padding: 4px 4px;
 				-moz-border-radius: 10px 10px;
-				cursor: url(https://i.imgur.com/xrySzI4.png), progress;
+				cursor: url(https://i.imgur.com/C9RGjYt.png), progress;
 			}
 			
 			#context_menu ul li:hover {
-				background: #fff9f9;
+				background: #fcf6f2;
 				color: #baada3;
 			}
 		</style>
@@ -194,145 +194,89 @@ menuuuuuuuuuuuuuuu
 		<div id="teste"></div>
 		<div id="context_menu">
 			<ul>
-				<li>　<font color="#baada3">© middlepot</font></li>
+				<li><font color="#baada3">stay safe.. !</font></li>
 			</ul>
 		</div>
 <!--
 menuuuuuuuuuuuuuuu
 -->
 
-
-<script>
-function popcbox(tid, tkey) {
-	var baseurl = "https://www5.cbox.ws/box/?boxid=884320&boxtag=v1q22y",
-		baseid = '5-884320',
-		fontop = 0;
-		turl = '',
-		tid = tid || 0,
-		tkey = tkey || "",
-		html = [],
-		width = 220,
-		height = 380,
-		fheight = 107;
-
-	if (tid && tkey) {
-		turl = '&tid='+tid+'&tkey='+tkey;
-	}
-		
-	var htmlform = '<frame src="'+baseurl+turl+'&sec=form" marginwidth="0" marginheight="0" noresize="true" scrolling="auto" name="cboxform'+baseid+'-'+tid+'">';
-	var htmlmain = '<frame src="'+baseurl+turl+'&sec=main" marginwidth="0" marginheight="0" noresize="true" scrolling="auto" name="cboxmain'+baseid+'-'+tid+'">';
-	var prows = (fontop) ? (fheight+',*') : ('*,'+fheight);
-	
-	html.push('<!DOCTYPE html><html><head><title>*.。ଘ(*´ ˘ `*)ഒ 。.*</title><meta name="viewport" content="width=device-width, user-scalable=no"><meta http-equiv="X-UA-Compatible" content="IE=edge"></head><frameset rows="'+prows+'" frameborder="0" framespacing="0">');
-	html.push(fontop ? htmlform : htmlmain);
-	html.push(fontop ? htmlmain : htmlform);
-	html.push('</frameset><noframes>Frames required</noframes></html>');
-	
-	var cboxwin = window.open("","Cbox-"+baseid+"-"+tid,"width="+width+",height="+height+",toolbar=no,scrollbars=no,status=no,resizable=yes");
-	cboxwin.document.open();
-	cboxwin.document.write(html.join(''));
-	try {
-		x = screen.width;
-		y = screen.height;
-		cboxwin.moveTo(Math.max((x - width)/2, 0), Math.max((y - height)/2, 0));
-		cboxwin.focus();
-	} catch (e) {};
-}
-</script>
-
 </head>
 
 
-<body ondragstart="return false" style="background-image:url(https://i.imgur.com/y6B6r2v.png); background-color:#FFF9F9; font-family: Verdana; font-size: 10px;">
+<body ondragstart="return false" style="background-image:url(https://i.imgur.com/s0V8ydU.png); background-repeat: no-repeat; background-size: cover; background-color:#fefbfb; font-family: Verdana; font-size: 10px;">
 <style>
 #base {
 position: absolute;
-	left: 20%;
-	top: 15%;
+	left: 13%;
+	top: 10%;
 overflow-y:hidden;
 overflow-x:hidden;
  }
 #menu1 {
 position: absolute;
-	left: 2%;
-	top: 4%;
-max-width: 130px;
-max-height: 490px;
+	left: %;
+	top: 30%;
+width: 130px;
+height: 250px;
 overflow-y:hidden;
 overflow-x:hidden;
 z-index: 2;
  }
 #menu2 {
 position: absolute;
-	left: 28%;
-	top: 4%;
-max-width: 560px;
-max-height: 35px;
+	left: 23%;
+	top: 1%;
+width: 560px;
+height: 35px;
 overflow-y:hidden;
 overflow-x:hidden;
 z-index: 4;
  }
+#menu3 {
+position: absolute;
+	left: 85%;
+	top: 50%;
+width: 130px;
+height: 250px;
+overflow-y:hidden;
+overflow-x:hidden;
+z-index: 2;
+ }
 #stuff {
 position: absolute;
-	left: 23%;
-	top: 14%;
+	left: 18.5%;
+	top: 12%;
 width: 594px;
 height: 433px;
 overflow-x:hidden;
 z-index: 6;
  }
-#aaa {
-position: relative;
-	left: 8%;
- }
 </style>
 <div id="base">
-<img src="https://i.imgur.com/pfTi48h.png"/>
+<img src="https://i.imgur.com/fEKbdEW.png"/>
 
 <div onselectstart="return false" id="menu1">
+<p style="font-size:10px;line-height:50%;"><br><br>
 
-　　&nbsp;<a href="https://middlepot.com"><img width="100px" height="auto" src="https://i.imgur.com/4XdG5rK.png"/></a><br><center><font color="#A08D7E">　© middlepot.com</font></center>
-<p style="font-size:10px;line-height:50%;">
-<br><br><br></p>
-　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="https://middlepot.com/about">about</a></font><br>
-　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="https://middlepot.com/links">links</a></font><br>
-　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="https://middlepot.com/contact">contact</a></font><br>
-　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="https://middlepot.com/credits">credits</a></font>
-<p style="font-size:10px;line-height:50%;">
-<br><br><br></p>
-
-<center>　　<img src="https://i.imgur.com/HA2l4dB.gif"/>
- <font color="#6E6156"><font size="2"><sup><a id="linkzinhoo" href="https://middlepot.com/blog">news blog</a></sup></font></font> <img src="https://i.imgur.com/VV0vQHD.gif"/></center>
-
-<p style="font-size:10px;line-height:50%;">
-<br></p>
-<center>　　<a href="JavaScript:popcbox('', '');"><img src="https://i.imgur.com/ysc4y4D.gif"/></a></center>
-<p style="font-size:10px;line-height:70%;">
-<br></p>
-
-<center><div id="aaa"><img src="https://i.imgur.com/93DE8B0.png"/><br>
-<a href="https://middlepot.com/milky-woods"><img src="https://i.imgur.com/43guVp5.png"/></a><br>
-<a href="https://middlepot.com/not-bad"><img src="https://i.imgur.com/OlFt7cw.png"/></a><br>
-<a href="https://middlepot.com/puporipot"><img src="https://i.imgur.com/m7ehqeT.png"/></a><br>
-<a href="https://middlepot.com/crwel-friends"><img src="https://i.imgur.com/czEnR0y.png"/></a><br>
-<a href="https://middlepot.com/fairy-loli"><img src="https://i.imgur.com/aJzy5nD.png"/></a><br>
-<a href="https://middlepot.com/potetomid"><img src="https://i.imgur.com/yE0iyO0.png"/></a><br>
-<a href="https://middlepot.com/soft-collection"><img src="https://i.imgur.com/k4KPMRn.png"/></a><br>
-<a href="https://middlepot.com/moep"><img src="https://i.imgur.com/MkgULzx.png"/></a><br>
-<img src="https://i.imgur.com/op6oXma.png"/></div></center>
-
-<p style="font-size:10px;line-height:70%;">
-<br><br></p>
-<center>
-　　<a href="https://shybunny.middlepot.com" target="_blank"><img src="https://i.imgur.com/gtevTSn.gif"/></a></center>
-
+　　　　<font color="#c6a799">ణ</font>　<a href="/about" style="text-decoration: none; color:#a3948d;">about</a><br><br><br>
+　　　　<font color="#c6a799">ణ</font>　<a href="/links" style="text-decoration: none; color:#a3948d;">links</a><br><br><br>
+　　　　<font color="#c6a799">ణ</font>　<a href="/contact" style="text-decoration: none; color:#a3948d;">contact</a><br><br><br>
+　　　　<font color="#c6a799">ణ</font>　<a href="/credits" style="text-decoration: none; color:#a3948d;">credits</a><br><br><br>
+</p>
+<br><br><br><br><br><br><br><br><br><br><br><br><br>
+　　　　　　<a href="/poofties" style="text-decoration: none; color:#8c7d75;">poofties</a>
 </div>
 
 <div id="menu2">
+<br>
+　　<a id="linkzinho" href="/status" style="text-decoration: none; color:#93847d;">status</a>　　　　　　　 <a id="linkzinho" href="/fashion" style="text-decoration: none; color:#93847d;">fashion</a>　　　　　　　<a id="linkzinho"href="/portfolio" style="text-decoration: none; color:#93847d;">portfolio</a>　　　　　　　<a id="linkzinho" href="/gaming" style="text-decoration: none; color:#93847d;">gaming</a>　　　　　　<a id="linkzinho" href="/recommended" style="text-decoration: none; color:#93847d;">recommended</a>
 
-<img src="https://i.imgur.com/PTzpVdh.png"/><a href="https://middlepot.com/status"><img src="https://i.imgur.com/gtWd2tI.png"/></a><a href="https://middlepot.com/look-book"><img src="https://i.imgur.com/21R6rOA.png"/></a><a href="https://middlepot.com/portfolio"><img src="https://i.imgur.com/5UlJkeC.png"/><a href=""></a><a href="https://middlepot.com/help"><img src="https://i.imgur.com/f6GSYqr.png"/></a><a href="https://middlepot.com/gaming"><img src="https://i.imgur.com/5dSoAlZ.png"/></a><a href="https://middlepot.com/cemetery"><img src="https://i.imgur.com/FctiXzO.png"/></a><a href="https://middlepot.com/recommended"><img src="https://i.imgur.com/myWm2B5.png"/></a><img src="https://i.imgur.com/W6coopC.png"/>
+</div>
 
-
+<div id="menu3">
+<br><br>
+　　　　　 <a href="/blog" style="text-decoration: none; color:#b29487;">my blog</a>
 </div>
 
 <div id="stuff">
@@ -349,15 +293,11 @@ to reach the 500 points, you'll be able to evolve your teddy bear !﻿</font></f
 <br><br><br><br>
 </center>
 
-　　　<a href="https://middlepot.com/milky-woods" id="linkbjinho">← back</a>
+　　　<a href="/milkywoods" id="linkbjinho" style="text-decoration: none; color:#ddb5b5;">← back</a>
 
 <br><br><br>
-
 </div>
-
-
 </div>
-
 
 
 
