--- a/about.html
+++ b/about.html
@@ -349,7 +349,11 @@ i'm graduated in game design and i like to study languages, mythology, css and o
 </div>
 </div>
 
+</div>
 
+<div style="position: absolute; left: 46.5%; top: 85%;">
+<a id="linkzinho" href="https://middlepot.com" style="text-decoration: none;"><font color="#8e7f69">middlepot.com</font></a>
+</div>
 
 
 
