--- a/bearcare.html
+++ b/bearcare.html
@@ -299,7 +299,9 @@ to reach the 500 points, you'll be able to evolve your teddy bear !﻿</font></f
 </div>
 </div>
 
-
+<div style="position: absolute; left: 46.5%; top: 85%;">
+<a id="linkzinho" href="https://middlepot.com" style="text-decoration: none;"><font color="#8e7f69">middlepot.com</font></a>
+</div>
 
 
 
