--- a/blog.html
+++ b/blog.html
@@ -641,7 +641,9 @@ xoxo <img src="https://i.imgur.com/hqun0bM.gif"/><br>
 </div>
 
 
-
+<div style="position: absolute; left: 46.5%; top: 85%;">
+<a id="linkzinho" href="https://middlepot.com" style="text-decoration: none;"><font color="#8e7f69">middlepot.com</font></a>
+</div>
 
 
 
