--- a/contact.html
+++ b/contact.html
@@ -1178,7 +1178,9 @@ a:hover {
 </div>
 </div>
 
-
+<div style="position: absolute; left: 46.5%; top: 85%;">
+<a id="linkzinho" href="https://middlepot.com" style="text-decoration: none;"><font color="#8e7f69">middlepot.com</font></a>
+</div>
 
 
 
