--- a/drawing.html
+++ b/drawing.html
@@ -1,4 +1,3 @@
-
 <html>
 <head>
 
@@ -282,135 +281,20 @@ z-index: 6;
 
 <div id="stuff">
 
-<br><br><br>
+<br><br>
+<br>
 <center>
-<img src="https://i.imgur.com/Ron7raE.png"><br>
-<!--------------------caixinha------------------------>
-<script type="text/javascript"> 
-iens6=document.all||document.getElementById
-ns4=document.layers
-//specify speed of scroll (greater=faster)
-var speed=1
-if (iens6){
-document.write('<div id="container" style="position:relative;width:201px;height:160px; border-right: solid 1px; border-top: solid 0px; border-left: solid 1px; color: #DACFCE; border-bottom: solid 2px; overflow:hidden; background-color:#fffcfc;">')
-document.write('<div id="content" style="position:absolute;width:190px;top:6px;text-align:justify; padding: 5px; font-size:8px; font-family:tahoma; color:#D0C3C2;">')
-}
-</script>
-<!-------------------------coisinhas---------------------------->
-<br>
-<font color="#d3a5a5"><center>･ ･ ･ middlepot disclaimer ･ ･ ･</center></font><br>
-this credits page contains all necessary information about my website, it will be frequently updated as necessary. before you manifests anyway, read this page completely. if you feel you must have your name here for any reason, please use the contact form to notify me and i will do my best. any manifestation on the improper location or offensive words will be ignored and deleted without notice.<br>
-the middlepot website content is provided on an "as is" basis and therefore, makes no warranties of any kind, expressed or implied to the fullest extent permissible by applicable law. i am not responsible for any damages ( including time loss ) due to using the website. the middlepot website reserves the right to refuse service to anyone at any time, and to remove anything, content or communications for any reason, at any time and without notice.<br>
-the middlepot website has links to other sites, which, in my view, may contain useful information / tools for the visitors. our disclaimer does not apply to third party sites, so that if another visit from our site should read the same privacy policy.<br>
-i am not responsible for the privacy policy or content present in those sites.<br>
-i use cookies to store information such as your personal preferences when you visit my website.<br>
-all personal information collected by cookies will be used to help make your visit to my website as productive and enjoyable as possible.<br>
-ensuring the confidentiality of personal data of my site's users is important for me.<br>
-all personal information concerning visitors who use the middlepot website will be treated in accordance with the applicable law.<br>
-it is recommended that you consult this disclaimer regularly in order to continually update.
-
-<!------------------------------------------------------------->
- 
- 
- 
-</ilayer><script language="JavaScript1.2"> 
-if (iens6)
-document.write('</div></div>')
-</script>
-
-<table width="200px"><td><div align="right">
-
-<a href="#" onMouseover="moveup()" onMouseout="clearTimeout(moveupvar)" ><img src="https://i.imgur.com/ExriANt.gif"/></a><a href="#" onMouseover="movedown()" onMouseout="clearTimeout(movedownvar)" ><img src="https://i.imgur.com/DRC6i9K.gif"/></a></div></td></table>
-
-<script language="JavaScript1.2">
-if (iens6){
-var crossobj=document.getElementById? document.getElementById("content") : document.all.content
-var contentheight=crossobj.offsetHeight
-}
-else if (ns4){
-var crossobj=document.nscontainer.document.nscontent
-var contentheight=crossobj.clip.height
-}
- 
-function movedown(){
-if (iens6&&parseInt(crossobj.style.top)>=(contentheight*(-1)+100))
-crossobj.style.top=parseInt(crossobj.style.top)-speed+"px"
-else if (ns4&&crossobj.top>=(contentheight*(-1)+100))
-crossobj.top-=speed
-movedownvar=setTimeout("movedown()",20)
-}
- 
-function moveup(){
-if (iens6&&parseInt(crossobj.style.top)<=0)
-crossobj.style.top=parseInt(crossobj.style.top)+speed+"px"
-else if (ns4&&crossobj.top<=0)
-crossobj.top+=speed
-moveupvar=setTimeout("moveup()",20)
-}
-</script>
-<!--------------------------caixinha---------------------------->
-<br><br><br></center>
-
-<div style="position: absolute; left:10%; right:10%;">
-<font family = "Verdana"><font color="#AD9F97"><font style="font-size:11px">// contact</font></font></font><br>
-<font family = "Verdana"><font color="#C6B5AA"><font style="font-size:9px">　　　form base code by <i>jotform</i></font></font></font><br><br>
-
-<font family = "Verdana"><font color="#AD9F97"><font style="font-size:11px">// blog</font></font></font><br>
-<font family = "Verdana"><font color="#C6B5AA"><font style="font-size:9px">　　　pixel art can be found on my pixel blog</font></font></font><br><br>
-
-<font family = "Verdana"><font color="#AD9F97"><font style="font-size:11px">// help</font></font></font><br>
-<font family = "Verdana"><font color="#C6B5AA"><font style="font-size:9px">　　　<i>music :</i> dreams * unknown</font></font></font><br><br>
-
-<font family = "Verdana"><font color="#AD9F97"><font style="font-size:11px">// gaming</font></font></font><br>
-<font family = "Verdana"><font color="#C6B5AA"><font style="font-size:9px">　　　graphics from <i>ragnarok online</i> ;<br>
-<font family = "Verdana"><font color="#C6B5AA"><font style="font-size:9px">　　　<i>music :</i> higher than the sun * ragnarok online ost<br><br>
-
-<font family = "Verdana"><font color="#AD9F97"><font style="font-size:11px">// poofties</font></font></font><br>
-<font family = "Verdana"><font color="#C6B5AA"><font style="font-size:9px">　　　<i>music :</i> heartsng1 * unknown</font></font></font><br><br>
-
-<font family = "Verdana"><font color="#AD9F97"><font style="font-size:11px">// milky woods</font></font></font><br>
-<font family = "Verdana"><font color="#C6B5AA"><font style="font-size:9px">　　　thank you <i>snut</i> and <i>fairyhalim</i> for inspiration !</font></font></font><br>
-<font family = "Verdana"><font color="#C6B5AA"><font style="font-size:9px">　　　<i>music :</i> ratinha branca * unknown</font></font></font><br><br>
-
-<font family = "Verdana"><font color="#B3A49A"><font style="font-size:9px">other credits are on the pages</font></font></font><br><br><br>
-
-
-
-<font family = "Verdana"><font color="#AD9F97"><font style="font-size:11px">hosting sites that i currently use :</font></font></font><br><br>
-<font family = "Verdana"><font color="#ddb5b5"><font style="font-size:9px">
-　　　server : github<br>
-　　　html : github<br>
-　　　image : imgur / catbox.moe<br>
-　　　mp3 : catbox.moe<br>
-　　　webm : catbox.moe<br>
-　　　font : catbox.moe<br>
-　　　txt : catbox.moe<br>
-　　　swf : catbox.moe<br>
-　　　folder : google drive<br>
-　　　script : google drive<br>
-　　　rar : mega<br><br>
-</font></font></font>
-<font family = "Verdana"><font color="#B3A49A"><font size="1"><i>
-* i'll update this list whenever i change a hosting.<br>
-* these sites are safe and all of them use https. privacy policy and use of cookies should be checked on the related websites.</i></font></font></font><br><br><br>
-
-<font family = "Verdana"><font color="#ddb5b5"><font size="1">
-　　[ important safety tips ]<br><br></font>
-<font color="#B3A49A"><font style="font-size:9px">
-i'm sorry, i know this website uses a lot of cookies !<br>
-this is because of the hosting sites and scripts. they are safe and i never had problems with them, also cookies exist to make your experience better and improve your visits according to your standards.<br>
-some people hate this, and i understand. it is not always pleasant, but i think it's important in some cases.<br>
-that's okay if you don't like them. you can always use the <i>anonymous mode</i> on your browser even on mobile, and you'll be simply free from all cookies. the <i>opera browser</i> is the best one for your privacy as it contains VPN itself.<br>
-also, i sugest you to use an extension for encryption ( <i>https everywhere</i> is what i use ), because i have no guarantee that all these websites will continue to use ssl forever.<br>
-if you don't like javascript or flash, you can disable it too in your browser settings, but i do not suggest this one because it will mess up the layout and consequently your experience on this website.<br>
-<br>
-i always try to keep the visitors safe and alert, so please, any safety issues feel free to contact me !
-</font></font></font>
-<br><br><br>
+<object width="468" height="300"><param value="https://files.catbox.moe/pnuxyp.swf" name="movie"/><param value="high" name="quality"/><embed width="468" height="300" type="application/x-shockwave-flash" quality="high" src="https://files.catbox.moe/pnuxyp.swf"></embed></object>
 
 <br><br>
-</div>
+<font family = "Verdana"><font color="#675656"><font size="1">﻿instructions : you can draw cute stuff there, regulating the alpha.</font></font></font><br><br>
+<font family = "Verdana"><font color="#80746D"><font size="1">music : Heartstrings - Going To Meet You</font></font></font>
+<br><br><br><br>
+</center>
 
+　　　<a href="/milkywoods" id="linkbjinho" style="text-decoration: none; color:#ddb5b5;">← back</a>
+
+<br><br><br>
 </div>
 </div>
 
