--- a/faq.html
+++ b/faq.html
@@ -1951,7 +1951,9 @@ some people will never learn to be happy, some people will never truly love. per
 </div>
 </div>
 
-
+<div style="position: absolute; left: 46.5%; top: 85%;">
+<a id="linkzinho" href="https://middlepot.com" style="text-decoration: none;"><font color="#8e7f69">middlepot.com</font></a>
+</div>
 
 
 
