--- a/fashion.html
+++ b/fashion.html
@@ -523,7 +523,9 @@ p { margin: 0; }
 </div>
 
 
-
+<div style="position: absolute; left: 46.5%; top: 85%;">
+<a id="linkzinho" href="https://middlepot.com" style="text-decoration: none;"><font color="#8e7f69">middlepot.com</font></a>
+</div>
 
 
 
