--- a/recommended.html
+++ b/recommended.html
@@ -350,7 +350,9 @@ z-index: 6;
 </div>
 
 
-
+<div style="position: absolute; left: 46.5%; top: 85%;">
+<a id="linkzinho" href="https://middlepot.com" style="text-decoration: none;"><font color="#8e7f69">middlepot.com</font></a>
+</div>
 
 
 
