--- a/credits.html
+++ b/credits.html
@@ -412,6 +412,7 @@ i always try to keep the visitors safe and alert, so please, any safety issues f
 
 </div>
 </div>
+</div>
 
 <div style="position: absolute; left: 46.5%; top: 85%;">
 <a id="linkzinho" href="https://middlepot.com" style="text-decoration: none;"><font color="#8e7f69">middlepot.com</font></a>
