--- a/credits.html
+++ b/credits.html
@@ -216,7 +216,7 @@ overflow-x:hidden;
 #menu1 {
 position: absolute;
 	left: %;
-	top: 30%;
+	top: 28%;
 width: 130px;
 height: 250px;
 overflow-y:hidden;
@@ -226,7 +226,7 @@ z-index: 2;
 #menu2 {
 position: absolute;
 	left: 23%;
-	top: 1%;
+	top: 0.3%;
 width: 560px;
 height: 35px;
 overflow-y:hidden;
@@ -236,7 +236,7 @@ z-index: 4;
 #menu3 {
 position: absolute;
 	left: 85%;
-	top: 50%;
+	top: 47%;
 width: 130px;
 height: 250px;
 overflow-y:hidden;
@@ -246,15 +246,31 @@ z-index: 2;
 #stuff {
 position: absolute;
 	left: 18.5%;
-	top: 12%;
+	top: 10.5%;
 width: 594px;
 height: 433px;
 overflow-x:hidden;
 z-index: 6;
  }
+#aaa {
+position: absolute;
+	left: 46.5%;
+	top: 96%;
+width: 100px;
+height: 100px;
+overflow-x:hidden;
+z-index: 3;
+ }
 </style>
+
 <div id="base">
-<img src="https://i.imgur.com/fEKbdEW.png"/>
+
+<div id="aaa">
+<a id="linkzinho" href="https://middlepot.com" style="text-decoration: none;"><font color="#8e7f69">middlepot.com</font></a>
+</div>
+
+<img src="https://i.imgur.com/Jm86w3I.png"/>
+
 
 <div onselectstart="return false" id="menu1">
 <p style="font-size:10px;line-height:50%;"><br><br>
@@ -389,9 +405,9 @@ moveupvar=setTimeout("moveup()",20)
 　　　script : google drive<br>
 　　　rar : mega<br><br>
 </font></font></font>
-<font family = "Verdana"><font color="#B3A49A"><font size="1"><i>
-* i'll update this list whenever i change a hosting.<br>
-* these sites are safe and all of them use https. privacy policy and use of cookies should be checked on the related websites.</i></font></font></font><br><br><br>
+<font family = "Verdana"><font color="#B3A49A"><font size="1">
+<font size="2">※</font> i'll update this list whenever i change a hosting.<br>
+<font size="2">※</font> these sites are safe and all of them use https. privacy policy and use of cookies should be checked on the related websites.</font></font></font><br><br><br>
 
 <font family = "Verdana"><font color="#ddb5b5"><font size="1">
 　　[ important safety tips ]<br><br></font>
@@ -413,11 +429,6 @@ i always try to keep the visitors safe and alert, so please, any safety issues f
 </div>
 </div>
 </div>
-
-<div style="position: absolute; left: 46.5%; top: 85%;">
-<a id="linkzinho" href="https://middlepot.com" style="text-decoration: none; font-size:10px;"><font color="#8e7f69">middlepot.com</font></a>
-</div>
-
 
 
 
