--- a/contact.html
+++ b/contact.html
@@ -655,7 +655,7 @@ h2 ~ .form-subHeader {
 }
 .form-textbox,
 .form-textarea {
-  padding: 3px 2px 1px 2px;
+  padding: 3px 2px 1px 2px; outline:none; 
 }
 .form-textbox,
 .form-textarea,
@@ -678,7 +678,7 @@ h2 ~ .form-subHeader {
 .form-buttons-wrapper {
   margin-left: 0 !important;
   margin-left: 156px !important;
-  text-align: left;
+  text-align: left;  outline:none; 
 }
 .form-header-group {
   border-bottom: none;
@@ -793,7 +793,7 @@ li[data-type="control_image"] img {
   .form-submit-print,
   .form-submit-reset {
     width: 100%;
-    margin-left: 0!important;
+    margin-left: 0!important;  outline:none; 
   }
   div[id*=at_] {
     font-size: 14px;
@@ -968,13 +968,13 @@ li[data-type="control_image"] img {
   }
   .form-buttons-wrapper {
     margin: 0!important;
-    margin-left: 0!important;
+    margin-left: 0!important;  outline:none; 
   }
   .form-buttons-wrapper button {
-    width: 100%;
+    width: 100%;  outline:none; 
   }
   .form-buttons-wrapper .form-submit-print {
-    margin: 0 !important;
+    margin: 0 !important;  outline:none; 
   }
   table {
     width: 100%!important;
@@ -1164,7 +1164,7 @@ a:hover {
       </li>
       <li class="form-line" data-type="control_button" id="id_2">
         <div id="cid_2" class="form-input-wide">
-          <div style="margin-left:156px" class="form-buttons-wrapper">
+          <div style=" outline:none; margin-left:156px" class="form-buttons-wrapper">
             <button id="input_2" type="submit" class="form-submit-button" data-component="button">
               ･ ˢᵉᶯᵈ ･
             </button>
