--- a/contact.html
+++ b/contact.html
@@ -509,7 +509,7 @@ JotForm.paymentExtrasOnTheFly([null,null,{"name":"submit","qid":"2","text":". * 
   -ms-transition-timing-function: ease;
   -o-transition-timing-function: ease;
   transition-timing-function: ease;
-  background-color: #fff8f8;
+  background-color: #faf3f3;
 }
 /* omer */
 .form-radio-item,
