--- a/index.html
+++ b/index.html
@@ -303,11 +303,11 @@ z-index: 3;
 <div id="update" style="background:linear-gradient(to top, #fcf6f2 ,transparent 90%); border: 1px; padding: 10px; overflow: auto; color: #BC9F9F; width: 172px;height: 110px; text-align: justify; font-family: Verdana; font-size:8px; line-height: 100%">
 <center><sub><sub><img src="https://i.imgur.com/96xhX4a.gif"></sub></sub>　<font color="#d3a5a5" size=1>updates</font>　<sub><sub><img src="https://i.imgur.com/8rwotzX.gif"></sub></sub></center>
 <br>
+　　03.01 <sub><sub><img width="15px" height="auto" src="https://i.imgur.com/2VoIyIV.png"></sub></sub> entry on: <font color="#DFB7B7">status page</font><br>
 　　02.25 <sub><sub><img width="15px" height="auto" src="https://i.imgur.com/2VoIyIV.png"></sub></sub> tips on: <font color="#DFB7B7">help page</font><br>
 　　02.24 <sub><sub><img width="15px" height="auto" src="https://i.imgur.com/2VoIyIV.png"></sub></sub> edit on: <font color="#DFB7B7">everything !?</font><br>
 　　02.21 <sub><sub><img width="15px" height="auto" src="https://i.imgur.com/2VoIyIV.png"></sub></sub> edit on: <font color="#DFB7B7">about page</font><br>
 　　02.19 <sub><sub><img width="15px" height="auto"src="https://i.imgur.com/2VoIyIV.png"></sub></sub> edit on: <font color="#DFB7B7">links page</font><br>
-　　02.14 <sub><sub><img width="15px" height="auto" src="https://i.imgur.com/2VoIyIV.png"></sub></sub> status on: <font color="#DFB7B7">status page</font><br>
 </div>
 </center>
 
@@ -320,7 +320,7 @@ z-index: 3;
     border-radius: 20px; outline:none; padding:2px; padding-left:3px; padding-right:3px; background-image:url(https://i.imgur.com/AgXOBtX.png); font-size:8px; font-family:Verdana; COLOR: #b29487"><a href="https://middlepot.com/"><img src="https://i.imgur.com/9t37pSy.png"></a></textarea>
 <br><br>
 
-<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2019 . february . 25</font></font></font>
+<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2019 . march . 01</font></font></font>
 <br><br>
 <font family = "Verdana"><font style="font-size:8px;"><font color="#d8c0ad">( </font><font color="#efb8b8">♡</font><a id="linkzinho" href="https://shybunny.middlepot.com" target="_blank"><font color="#c9a5a5"> visite minha lojinha </font></a><font color="#efb8b8">♡</font><font color="#d8c0ad"> )</font></font></font>
 <br><br><br>
