--- a/help.html
+++ b/help.html
@@ -466,9 +466,10 @@ function getPosition(el) {
 <br><br>
 <br><a name="cut" id="cut"></a>
 <img src="https://i.imgur.com/Whw2SOT.png"> <font color="#b29372" style="font-size:9px">if you cut yourself :</font><br><br>
-・ hide the scars with long sleeves, wear bracelets or use make up<br>
-・ fade the scars with aloe vera juice, vitamin e oil, lemon juice<br>
+・ fade the scars with aloe vera juice, vitamin e oil, lemon juice. you can also hide it with make up !<br>
 ・ substitutes for cutting : draw something with a red or a black pen where you want to cut ; put band aids in the place where you want to cut ; get a scrap book and write down your feelings, scribblings, drawings or poems on it<br>
+・ please remember your body is really precious, it's a wonderful organism, always doing its best to keep you healthy. without it, you couldn't do many things and live happy experiences. your body is an ecosystem and there is a lot of life in it, hurting it is like hurting a forest !!<br>
+・ the sensation you feel when cutting yourself is the release of endorphins because your body is trying to make you feel better to fight the pain. you don't have to hurt it to get endorphins ! if you're feeling bad you can try walking out, cleaning your room, anything that makes you feel exhausted and proud. i promise, it's way way better !<br>
 <br>
 <br><br>
 <br><a name="stress" id="stress"></a>
