--- a/credits.html
+++ b/credits.html
@@ -411,16 +411,15 @@ moveupvar=setTimeout("moveup()",20)
 
 <font family = "Verdana"><font color="#ddb5b5"><font size="1">
 　　[ important safety tips ]<br><br></font>
-<font color="#B3A49A"><font style="font-size:9px">
-i'm sorry, i know this website uses a lot of cookies !<br>
-this is because of the hosting sites and scripts. they are safe and i never had problems with them, also cookies exist to make your experience better and improve your visits according to your standards.<br>
-some people hate this, and i understand. it is not always pleasant, but i think it's important in some cases.<br>
-that's okay if you don't like them. you can always use the <i>anonymous mode</i> on your browser even on mobile, and you'll be simply free from all cookies. the <i>opera browser</i> is the best one for your privacy as it contains VPN itself.<br>
-also, i sugest you to use an extension for encryption ( <i>https everywhere</i> is what i use ), because i have no guarantee that all these websites will continue to use ssl forever.<br>
-if you don't like javascript or flash, you can disable it too in your browser settings, but i do not suggest this one because it will mess up the layout and consequently your experience on this website.<br>
+<font color="#B3A49A"><font style="font-size:9px"><font family = "Verdana">
+i'm sorry, this website use some cookies !<br>
+this is because of the hosting sites and scripts. they are safe and i never had problems with them.. cookies are not very pleasant, but i think it's inevitable in some cases.<br>
+that's okay if you don't want to keep cookies, though ! you can always use the <i>anonymous mode</i> on your browser even on mobile, and you'll be simply free from all cookies. the <i>opera browser</i> is the best one for your privacy as it contains VPN itself.<br>
+if you don't like javascript or flash, you can disable it too in your browser settings, this website works 80% ok without these.<br>
+also, i sugest you to use an extension for encryption ( <i>https everywhere</i> is what i use ). i try to keep everything encrypted, but sometimes ssl certificates can expire and take a while to be renewed.. !<br>
 <br>
-i always try to keep the visitors safe and alert, so please, any safety issues feel free to contact me !
-</font></font></font>
+i always try to keep the visitors safe and privacy is something i respect, so please, any issues feel free to contact me !
+</font></font></font></font>
 <br><br><br>
 
 <br><br>
