--- a/links.html
+++ b/links.html
@@ -307,6 +307,8 @@ z-index: 3;
 <sub><sub><img src="https://i.imgur.com/z2FwsNG.png"></sub></sub><font color="#c1a98b">
  html stuff :</font><br><br>
 <div style="width: 110px; height: 50px; overflow-x:hidden;">
+<a id="ooo" title="ragnarok online scenarios" href="https://kafra.ro.lt" target="_blank" >kafra.ro.lt</a>
+<br>
 <a id="ooo" title="my first layout ever" href="https://kawaii.info.gf" target="_blank" >kawaii.info.gf</a>
 <br>
 <a id="ooo" title="???" href="https://soft.root.sx" target="_blank" >soft.root.sx</a>
