--- a/gaming.html
+++ b/gaming.html
@@ -1000,7 +1000,9 @@ p { margin: 0; }
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <br>
 <img src="https://i.imgur.com/YJMBRnY.gif"/>　<img src="https://i.imgur.com/f38jgcv.gif"/>　<img src="https://i.imgur.com/osKIKE8.gif"/><br><br>
-<img src="https://i.imgur.com/RFcyci1.gif"/>　<img src="https://i.imgur.com/6vSkecb.gif"/>　<img src="https://i.imgur.com/McI88Bm.gif"/>
+<img src="https://i.imgur.com/RFcyci1.gif"/>　<img src="https://i.imgur.com/6vSkecb.gif"/>　<img src="https://i.imgur.com/McI88Bm.gif"/><br><br>
+<img src="https://i.imgur.com/x21peRl.gif"/>　<img src="https://i.imgur.com/oRjKJfb.gif"/>　<img src="https://i.imgur.com/WSU8xPc.gif"/>
+
 <br><br>
 </div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <style>
